syntax = "proto3";

package auth;

// Servicio de Autenticación (versión simplificada)
service AuthService {
  // Iniciar sesión
  rpc Login(LoginRequest) returns (LoginResponse);
  
  // Validar token JWT
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);

  // Crear Usuario
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}

// Mensajes de Request
message LoginRequest {
  string email = 1;
  string password = 2;
}

message ValidateTokenRequest {
  string token = 1;
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
  int32 role_id = 5;
}

// Mensajes de Response
message LoginResponse {
  bool success = 1;
  string message = 2;
  string access_token = 3;
  UserData user = 4;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  string email = 3;
  repeated string roles = 4;
}

message CreateUserResponse {
  bool success = 1;
  string message = 2;
  UserData user = 3;
}


// Tipos de datos
message UserData {
  string id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  repeated string roles = 5;
}